syntax = "proto3";

package auth;

option go_package = "skillsync-authservice/proto";

service AuthService {
    rpc Signup (SignupRequest) returns (SignupResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}

message SignupRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message SignupResponse {
    string message = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string message = 2;
}
